--- a/T_app/templates/data_input_montly.html
+++ b/T_app/templates/data_input_montly.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Data Input Monthly</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/bootstrap.min.css" rel="stylesheet">
@@ -61,44 +61,30 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
-            <div class="btn-toolbar mb-2 mb-md-0">
-              <div class="btn-group mr-2">
-                <button class="btn btn-sm btn-outline-secondary">Import</button>
-                <button class="btn btn-sm btn-outline-secondary">Export</button>
-                <button class="btn btn-sm btn-outline-secondary">Edit</button>
-              </div>
-              <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                <span data-feather="calendar"></span>
-                This week
-              </button>
-            </div>
+          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+            <h1 class="h2">Month by Month</h1>
           </div>
 
-          <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-
-          <h2>Section title</h2>
+          
           <div class="table-responsive">
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
-                  <th>Section Title</th>
                   <th>Month</th>
+                  <th>kWh</th>
                 </tr>
               </thead>
-              <tbody>
-                <tr>
-                  <td>1,001</td>
-                  <td>Lorem</td>
-                </tr>
-              </tbody>
+              <form class="needs-validation" novalidate action="/login" method="POST">
+                <tbody>
+                  <tr>
+                    <td>January</td>
+                    <td><input type="text" name= "energy_january" class="form-control col-4" id="energy_jan" placeholder="" value="" required></td>
+                  </tr>
+                </tbody>
+              </form>
             </table>
           </div>
-          <div class="py-1 text-warning text-center">
-            <button class="btn btn-sm btn-danger">Delete Section Title</button>
-          </div>
-         </main>
+        </main>
       </div>
     </div>
 
