--- a/T_app/templates/homes.html
+++ b/T_app/templates/homes.html
@@ -33,13 +33,13 @@
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link active" href="#">
                   <span data-feather="home"></span>
-                  Sites <span class="sr-only">(current)</span>
+                  Homes <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">
+                <a class="nav-link" href="#">
                   <span data-feather="file"></span>
                   Energy Use
                 </a>
@@ -62,43 +62,15 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
-            <div class="btn-toolbar mb-2 mb-md-0">
-              <div class="btn-group mr-2">
-                <button class="btn btn-sm btn-outline-secondary">Import</button>
-                <button class="btn btn-sm btn-outline-secondary">Export</button>
-                <button class="btn btn-sm btn-outline-secondary">Edit</button>
-              </div>
-              <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                <span data-feather="calendar"></span>
-                This week
-              </button>
-            </div>
+            <h1 class="h2">Homes</h1>
           </div>
+          
+          
+          <span data-feather="home"></span>
+          
 
           <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-
-          <h2>Section title</h2>
-          <div class="table-responsive">
-            <table class="table table-striped table-sm">
-              <thead>
-                <tr>
-                  <th>Section Title</th>
-                  <th>Month</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1,001</td>
-                  <td>Lorem</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="py-1 text-warning text-center">
-            <button class="btn btn-sm btn-danger">Delete Section Title</button>
-          </div>
-         </main>
+        </main>
       </div>
     </div>
 
