--- a/T_app/templates/energy_use.html
+++ b/T_app/templates/energy_use.html
@@ -35,7 +35,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">
                   <span data-feather="home"></span>
-                  Sites <span class="sr-only">(current)</span>
+                  Homes <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
@@ -46,7 +46,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">
-                  <span></span>
+                  <span data-feather="trello"></span>
                   Transition
                 </a>
               </li>
@@ -71,7 +71,7 @@
               </div>
               <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
                 <span data-feather="calendar"></span>
-                This week
+                Year
               </button>
             </div>
           </div>
@@ -84,12 +84,16 @@
               <thead>
                 <tr>
                   <th>Section Title</th>
-                  <th>Month</th>
+                  <th>Actual</th>
+                  <th>Expected</th>
+                  <th>Delta (%)</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>1,001</td>
+                  <td>Lorem</td>
+                  <td>Lorem</td>
                   <td>Lorem</td>
                 </tr>
               </tbody>
