--- a/T_app/templates/data_input_montly.html
+++ b/T_app/templates/data_input_montly.html
@@ -35,7 +35,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">
                   <span data-feather="home"></span>
-                  Sites <span class="sr-only">(current)</span>
+                  Homes <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
