--- a/T_app/templates/homes.html
+++ b/T_app/templates/homes.html
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="../static/dashboard.css" rel="stylesheet">
+    <link href="../static/custom.css" rel="stylesheet">
   </head>
 
   <body>
@@ -27,6 +28,7 @@
       </ul>
     </nav>
 
+    
     <div class="container-fluid">
       <div class="row">
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
@@ -64,12 +66,34 @@
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
             <h1 class="h2">Homes</h1>
           </div>
-          
-          
-          <span data-feather="home"></span>
-          
 
-          <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+          <div class="py-5">
+            <div class="container">    
+      
+              <div class="row">
+                <div class="col-md-3">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top-custom" src="../images/home.png" alt="Card image cap">
+                    <div class="card-body">
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                          <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        </div>
+                        <small class="text-muted">9 mins</small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top-custom" src="../images/plus.png" alt="Card image cap">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </main>
       </div>
     </div>
