--- a/T_app/templates/transition.html
+++ b/T_app/templates/transition.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Community</title>
+    <title>Transition</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/bootstrap.min.css" rel="stylesheet">
@@ -45,13 +45,13 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link active" href="#">
                   <span></span>
                   Transition
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">
+                <a class="nav-link" href="#">
                   <span data-feather="users"></span>
                   Community
                 </a>
@@ -61,10 +61,22 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Sample Topic</h1>
-          </div>
-
+          <div class="pt-3 pb-2 mb-3">
+            <ul class="nav nav-tabs">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Existing Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Energy Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Projections</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Learn More</a>
+              </li>
+            </ul>
+            </div>
         </main>
       </div>
     </div>
