--- a/T_app/templates/energy_use.html
+++ b/T_app/templates/energy_use.html
@@ -10,10 +10,10 @@
     <title>Dashboard Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/dashboard.css" rel="stylesheet">
+    <link href="../static/css/dashboard.css" rel="stylesheet">
   </head>
 
   <body>
@@ -35,13 +35,13 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">
                   <span data-feather="home"></span>
-                  Homes <span class="sr-only">(current)</span>
+                  Homes
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">
                   <span data-feather="file"></span>
-                  Energy Use
+                  Energy Use<span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
