--- a/T_app/templates/home.html
+++ b/T_app/templates/home.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Transition</title>
+    <title>Data Input Monthly</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -33,9 +33,9 @@
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link active" href="#">
                   <span data-feather="home"></span>
-                  Sites <span class="sr-only">(current)</span>
+                  Homes <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
@@ -45,8 +45,8 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">
-                  <span></span>
+                <a class="nav-link" href="#">
+                  <span data-feather="trello"></span>
                   Transition
                 </a>
               </li>
@@ -61,22 +61,42 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-          <div class="pt-3 pb-2 mb-3">
-            <ul class="nav nav-tabs">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Existing Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Energy Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Projections</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Learn More</a>
-              </li>
-            </ul>
-            </div>
+          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+            <h1 class="h2">New Home</h1>
+          </div>
+
+          
+          <div class="table-responsive">
+            <form class="needs-validation" novalidate action="/home_create" method="POST">
+              <div class="py-1 text-danger text-left">
+                {% csrf_token %}
+                {% if messages %}
+                  <ul class = "messages">
+                  {% for message in messages %}
+                    <li {% if message.tags%} class="{{message.tags}}" {% endif %}>{{message}}</li>
+                  {% endfor %}
+                  </ul>
+                {% endif %}
+              </div>
+              <table class="table table-striped table-lg">
+                  <tbody>
+                    <tr>
+                      <td>Name</td>
+                      <td><input type="text" name= "name" class="form-control col-6" id="name" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>Location</td>
+                      <td><input type="text" name= "location" class="form-control col-6" id="location" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>Description</td>
+                      <td><textarea  type="text" name= "description" class="form-control col-6" id="description" placeholder="" value="" required maxlength="120"></textarea></td>
+                    </tr>
+                  </tbody>
+              </table>
+              <button class="btn btn-lg btn-dark" type="submit">Submit</button>
+            </form>
+          </div>
         </main>
       </div>
     </div>
