--- a/T_app/templates/homes.html
+++ b/T_app/templates/homes.html
@@ -10,11 +10,11 @@
     <title>Dashboard Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/dashboard.css" rel="stylesheet">
-    <link href="../static/custom.css" rel="stylesheet">
+    <link href="../static/css/dashboard.css" rel="stylesheet">
+    <link href="../static/css/custom.css" rel="stylesheet">
   </head>
 
   <body>
@@ -23,7 +23,7 @@
       <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sign out</a>
+          <a class="nav-link" href="/logout">logout</a>
         </li>
       </ul>
     </nav>
@@ -48,7 +48,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">
-                  <span></span>
+                  <span data-feather="trello"></span>
                   Transition
                 </a>
               </li>
@@ -64,32 +64,37 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Homes</h1>
+            <h2 class="h2">Homes</h2>
           </div>
 
           <div class="py-5">
-            <div class="container">    
-      
-              <div class="row">
-                <div class="col-md-3">
-                  <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top-custom" src="../images/home.png" alt="Card image cap">
-                    <div class="card-body">
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                          <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
+            <div class="container row">    
+
+            {% for home in homes %}
+              <div class="col-md-3">
+                <div class="card mb-4 shadow-sm">
+                  <img class="card-img-top-custom" src="../static/images/home.png" alt="Home">
+                  <div class="card-body">
+                    <h3 class="h4">{{ home.name }}</h3>
+                    <h3 class="h6">{{ home.location }}</h3>
+                    <p class="card-text">{{ home.description }}</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                       </div>
+                      <!-- <small class="text-muted">{{ home.created_at }}</small> -->
                     </div>
                   </div>
                 </div>
-                <div class="col-md-3">
-                  <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top-custom" src="../images/plus.png" alt="Card image cap">
-                  </div>
+              </div>
+            {% endfor %}
+
+              <div class="col-md-3">
+                <div class="card mb-4 shadow-sm stretched-link">
+                  <a href="/new_home">
+                    <img class="card-img-top-custom" src="../static/images/plus.png" alt="New Home">
+                  </a>
                 </div>
               </div>
             </div>
