--- a/T_app/templates/login.html
+++ b/T_app/templates/login.html
@@ -10,10 +10,10 @@
     <title>Login</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/cover.css" rel="stylesheet">
+    <link href="../static/css/cover.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
@@ -32,19 +32,20 @@
       <main role="main" class="inner cover">
         <div class="py-5">
           <form class="needs-validation" novalidate action="/login" method="POST">
+            {% csrf_token %}
             <div class="py-2 text-center">
               <h2>Log In</h2>
             </div>
             <div class="py-3">
               <div class="py-1 text-warning text-left">
-              <!-- {% csrf_token %}
+              {% csrf_token %}
               {% if messages %}
                 <ul class = "messages">
                 {% for message in messages %}
                   <li {% if message.tags%} class="{{message.tags}}" {% endif %}>{{message}}</li>
                 {% endfor %}
                 </ul>
-              {% endif %} -->
+              {% endif %}
               </div>
               <div class="row">
                 <div class="col-3">
@@ -65,9 +66,9 @@
               <div>
                 <hr class="mb-4">            
                 <p class="lead">
-                  <a href="#" class="btn btn-lg btn-secondary" type="submit">Submit</a>
+                  <button class="btn btn-lg btn-secondary shadow-lg" type="submit">Submit</button>
                 </p>
-                <p class="py-3"><a href=/logout>Sign Up</a></p>
+                <p class="py-3"><a href=/registration>Sign Up</a></p>
               </div>
             </div>
           </form>
