--- a/T_app/static/css/custom.css
+++ b/T_app/static/css/custom.css
@@ -4,3 +4,14 @@
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
 }
+
+.table-custom {
+  
+  width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent;
+}
+
+.noborder {
+  border-style: none
+}
