--- a/T_app/templates/homes.html
+++ b/T_app/templates/homes.html
@@ -80,7 +80,9 @@
                     <p class="card-text">{{ home.description }}</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
+                        <a href="{{home.id}}/reports">
                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        </a>
                         <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                       </div>
                       <!-- <small class="text-muted">{{ home.created_at }}</small> -->
