--- a/T_app/templates/input_report.html
+++ b/T_app/templates/input_report.html
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="../static/css/dashboard.css" rel="stylesheet">
+    <link href="../static/css/custom.css" rel="stylesheet">
   </head>
 
   <body>
@@ -65,25 +66,76 @@
             <h1 class="h2">Month by Month</h1>
           </div>
 
-          
-          <div class="table-responsive">
-            <table class="table table-striped table-sm">
-              <thead>
-                <tr>
-                  <th>Month</th>
-                  <th>kWh</th>
-                </tr>
-              </thead>
-              <form class="needs-validation" novalidate action="/login" method="POST">
+          <form class="needs-validation" novalidate action="/report_create" method="POST">
+            <table class="table noborder">
                 <tbody>
                   <tr>
-                    <td>January</td>
-                    <td><input type="text" name= "energy_january" class="form-control col-4" id="energy_jan" placeholder="" value="" required></td>
+                    <td><h2 class="h3">Year</h2></td>
+                    <td><input type="text" name= "jan_energy" class="form-control col-4" id="energy_jan" placeholder="" value="" required></td>
                   </tr>
                 </tbody>
-              </form>
             </table>
-          </div>
+            <div class="table-responsive">
+              <table class="table table-striped table-sm">
+                <thead>
+                  <tr>
+                    <th>Month</th>
+                    <th>kWh</th>
+                  </tr>
+                </thead>
+                  <tbody>
+                    <tr>
+                      <td>January</td>
+                      <td><input type="text" name= "jan_energy" class="form-control col-4" id="energy_jan" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>Feburary</td>
+                      <td><input type="text" name= "feb_energy" class="form-control col-4" id="feb_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>March</td>
+                      <td><input type="text" name= "mar_energy" class="form-control col-4" id="mar_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>April</td>
+                      <td><input type="text" name= "apr_energy" class="form-control col-4" id="apr_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>May</td>
+                      <td><input type="text" name= "may_energy" class="form-control col-4" id="may_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>June</td>
+                      <td><input type="text" name= "jun_energy" class="form-control col-4" id="jun_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>July</td>
+                      <td><input type="text" name= "jul_energy" class="form-control col-4" id="jul_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>August</td>
+                      <td><input type="text" name= "aug_energy" class="form-control col-4" id="aug_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>September</td>
+                      <td><input type="text" name= "sep_energy" class="form-control col-4" id="sep_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>October</td>
+                      <td><input type="text" name= "oct_energy" class="form-control col-4" id="oct_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>November</td>
+                      <td><input type="text" name= "nov_energy" class="form-control col-4" id="nov_energy" placeholder="" value="" required></td>
+                    </tr>
+                    <tr>
+                      <td>December</td>
+                      <td><input type="text" name= "dec_energy" class="form-control col-4" id="dec_energy" placeholder="" value="" required></td>
+                    </tr>
+                  </tbody>
+              </table>
+            </div>
+          </form>
         </main>
       </div>
     </div>
