--- a/T_app/templates/report.html
+++ b/T_app/templates/report.html
@@ -7,13 +7,13 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Data Input Monthly</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/dashboard.css" rel="stylesheet">
+    <link href="/static/css/dashboard.css" rel="stylesheet">
   </head>
 
   <body>
@@ -65,8 +65,11 @@
             <h1 class="h2">Dashboard</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
               <div class="btn-group mr-2">
-                <button class="btn btn-sm btn-outline-secondary">Import</button>
-                <button class="btn btn-sm btn-outline-secondary">Export</button>
+                <!-- <button class="btn btn-sm btn-outline-secondary">Import</button> -->
+                <!-- <button class="btn btn-sm btn-outline-secondary">Export</button> -->
+                <a href="{{home.id}}/reports">
+                <button class="btn btn-sm btn-outline-secondary">New</button>
+                </a>
                 <button class="btn btn-sm btn-outline-secondary">Edit</button>
               </div>
               <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
@@ -91,25 +94,52 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>{{report.jan_energy}}</td>
-                  <td>{{report.feb_energy}}</td>
-                  <td>{{report.mar_energy}}</td>
-                  <td>{{report.apr_energy}}</td>
-                  <td>{{report.may_energy}}</td>
-                  <td>{{report.jun_energy}}</td>
-                  <td>{{report.jul_energy}}</td>
-                  <td>{{report.aug_energy}}</td>
-                  <td>{{report.sep_energy}}</td>
-                  <td>{{report.oct_energy}}</td>
-                  <td>{{report.nov_energy}}</td>
-                  <td>{{report.dec_energy}}</td>
-                  <td>{{}}</td>
-                  <td>Lorem</td>
-                  <td>Lorem</td>
-                  <td>Lorem</td>
+                  <td>January</td>
+                  <td>{{ report.jan_energy }}</td>
                 </tr>
                 <tr>
-                  
+                  <td>Februrary</td>
+                  <td>{{ report.feb_energy }}</td>
+                </tr>
+                <tr>
+                  <td>March</td>
+                  <td>{{ report.mar_energy }}</td>
+                </tr>
+                <tr>
+                  <td>April</td>
+                  <td>{{ report.apr_energy }}</td>
+                </tr>
+                <tr>
+                  <td>May</td>
+                  <td>{{ report.may_energy }}</td>
+                </tr>
+                <tr>
+                  <td>June</td>
+                  <td>{{ report.jun_energy }}</td>
+                </tr>
+                <tr>
+                  <td>July</td>
+                  <td>{{ report.jul_energy }}</td>
+                </tr>
+                <tr>
+                  <td>August</td>
+                  <td>{{ report.aug_energy }}</td>
+                </tr>
+                <tr>
+                  <td>September</td>
+                  <td>{{ report.sep_energy }}</td>
+                </tr>
+                <tr>
+                  <td>October</td>
+                  <td>{{ report.oct_energy }}</td>
+                </tr>
+                <tr>
+                  <td>November</td>
+                  <td>{{ report.nov_energy }}</td>
+                </tr>
+                <tr>
+                  <td>December</td>
+                  <td>{{ report.dec_energy }}</td>
                 </tr>
               </tbody>
             </table>
@@ -142,9 +172,9 @@
       var myChart = new Chart(ctx, {
         type: 'line',
         data: {
-          labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+          labels: ["January", "February", "March", "Arpil", "May", "June", "July", "August", "September", "October", "November", "December" ],
           datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
+            data: [{{ report.jan_energy }}, 21345, 18483, 24003, 23489, 24092, 12034],
             lineTension: 0,
             backgroundColor: 'transparent',
             borderColor: '#007bff',
