--- a/T_app/templates/input_report.html
+++ b/T_app/templates/input_report.html
@@ -1,80 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Data Input Monthly</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="../static/css/dashboard.css" rel="stylesheet">
-    <link href="../static/css/custom.css" rel="stylesheet">
-  </head>
+  {% include 'base/head.html' %}
 
   <body>
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">T-Project</a>
-      <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-      <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sign out</a>
-        </li>
-      </ul>
-    </nav>
+    
+    {% include 'base/navbar.html' %}
 
     <div class="container-fluid">
       <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="home"></span>
-                  Homes <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">
-                  <span data-feather="file"></span>
-                  Energy Use
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span></span>
-                  Transition
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="users"></span>
-                  Community
-                </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+        
+        {% include 'base/sidebar_energy_act.html' %}
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-            <h1 class="h2">Month by Month</h1>
-          </div>
-
-          <form class="needs-validation" novalidate action="/report_create" method="POST">
-            <table class="table noborder">
+          <form class="needs-validation" novalidate action="/{{home.id}}/report_create" method="POST">
+            <div class="">
+            <table class="table py-5">
                 <tbody>
                   <tr>
-                    <td><h2 class="h3">Year</h2></td>
-                    <td><input type="text" name= "jan_energy" class="form-control col-4" id="energy_jan" placeholder="" value="" required></td>
+                    <td><h2 class="h2">Year</h2></td>
+                    <td><input type="text" name= "year" class="form-control col-4" id="year" placeholder="" value="" required></td>
                   </tr>
                 </tbody>
             </table>
+            </div>
+            <div class="py-1 text-danger text-left">
+              {% csrf_token %}
+              {% if messages %}
+                <ul class = "messages">
+                {% for message in messages %}
+                  <li {% if message.tags%} class="{{message.tags}}" {% endif %}>{{message}}</li>
+                {% endfor %}
+                </ul>
+              {% endif %}
+            </div>
             <div class="table-responsive">
               <table class="table table-striped table-sm">
                 <thead>
@@ -134,6 +93,7 @@
                     </tr>
                   </tbody>
               </table>
+              <button class="btn btn-lg btn-dark" type="submit">Submit</button>
             </div>
           </form>
         </main>
