First version deploy

--- a/T_app/templates/coming_soon.html
+++ b/T_app/templates/coming_soon.html
@@ -10,13 +10,12 @@
     <div class="container-fluid">
       <div class="row">
         
-        {% include 'base/sidebar_energy_act.html' %}
+        {% include 'base/sidebar_no_act.html' %}
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
+            <h1 class="h2">Coming Soon</h1>
           </div>
-          <h4>No report has been slected. Please add a home and add a report to that home.</h4>
          </main>
       </div>
     </div>
