--- a/T_app/templates/users_view.html
+++ b/T_app/templates/users_view.html
@@ -1,19 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Coding Dojo Survey</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/static/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="/static/form-validation.css" rel="stylesheet">
-  </head>
+  {% include 'base/head.html' %}
 
   <body class="bg-light">
     <p class="text-right"><a href=/logout>logout</a></p>
