--- a/T_app/templates/base/head.html
+++ b/T_app/templates/base/head.html
@@ -1,11 +1,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="A community tool for people on their energy transition journey." content="">
   <meta name="author" content="">
   <link rel="icon" href="../../../../favicon.ico">
 
-  <title>Dashboard Template for Bootstrap</title>
+  <title>T-Project</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
