--- a/T_app/templates/base/sidebar_home_act.html
+++ b/T_app/templates/base/sidebar_home_act.html
@@ -14,13 +14,13 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/">
+        <a class="nav-link" href="/transition">
           <span data-feather="trello"></span>
-          Transition
+          Transitions
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/">
+        <a class="nav-link" href="/community">
           <span data-feather="users"></span>
           Community
         </a>
