--- a/T_app/templates/base/sidebar_no_act.html
+++ b/T_app/templates/base/sidebar_no_act.html
@@ -8,9 +8,9 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="/">
+        <a class="nav-link" href="/noreport">
           <span data-feather="file"></span>
-          Energy Report <span class="sr-only">(current)</span>
+          Energy Report
         </a>
       </li>
       <li class="nav-item">
