--- a/T_app/templates/home_edit.html
+++ b/T_app/templates/home_edit.html
@@ -4,7 +4,7 @@
   {% include 'base/head.html' %}
 
   <body>
-    
+
     {% include 'base/navbar.html' %}
 
     <div class="container-fluid">
@@ -14,12 +14,11 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-            <h1 class="h2">New Home</h1>
+            <h1 class="h2">Edit Home</h1>
           </div>
-
           
           <div class="table-responsive">
-            <form class="needs-validation" novalidate action="/home_create" method="POST">
+            <form class="needs-validation" novalidate action="/home/edit/{{id}}" method="POST">
               <div class="py-1 text-danger text-left">
                 {% csrf_token %}
                 {% if messages %}
@@ -34,69 +33,26 @@
                   <tbody>
                     <tr>
                       <td>Name</td>
-                      <td><input type="text" name= "name" class="form-control col-6" id="name" placeholder="" value="" required></td>
+                      <td><input type="text" name= "name" class="form-control col-6" id="name" placeholder="" value="{{ home.name }}" required></td>
                     </tr>
                     <tr>
                       <td>Location</td>
-                      <td><input type="text" name= "location" class="form-control col-6" id="location" placeholder="" value="" required></td>
+                      <td><input type="text" name= "location" class="form-control col-6" id="location" placeholder="" value="{{ home.location }}" required></td>
                     </tr>
                     <tr>
                       <td>Description</td>
-                      <td><textarea  type="text" name= "description" class="form-control col-6" id="description" placeholder="" value="" required maxlength="120"></textarea></td>
+                      <td><textarea  type="text" name= "description" class="form-control col-6" id="description" placeholder="" value="{{ home.description }}" required maxlength="120"></textarea></td>
                     </tr>
                   </tbody>
               </table>
-              <button class="btn btn-lg btn-dark" type="submit">Submit</button>
+              <button class="btn btn-lg btn-dark" type="submit">Update</button>
             </form>
           </div>
         </main>
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-
-    <!-- Icons -->
-    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-    <script>
-      feather.replace()
-    </script>
-
-    <!-- Graphs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-    <script>
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-          datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-            lineTension: 0,
-            backgroundColor: 'transparent',
-            borderColor: '#007bff',
-            borderWidth: 4,
-            pointBackgroundColor: '#007bff'
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero: false
-              }
-            }]
-          },
-          legend: {
-            display: false,
-          }
-        }
-      });
-    </script>
+    {% include 'base/bootstrap_js.html' %}
+    
   </body>
 </html>
