Removed edit button if you have not added a home. Added 'kWh' to report input

--- a/T_app/templates/input_report.html
+++ b/T_app/templates/input_report.html
@@ -45,51 +45,51 @@
                   <tbody>
                     <tr>
                       <td>January</td>
-                      <td><input type="text" name= "jan_energy" class="form-control col-3" id="energy_jan" placeholder="" value="" required><p>kWh</p></td>
+                      <td><input type="text" name= "jan_energy" class="form-control-custom col-3" id="energy_jan" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>Feburary</td>
-                      <td><input type="text" name= "feb_energy" class="form-control col-3" id="feb_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "feb_energy" class="form-control col-3" id="feb_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>March</td>
-                      <td><input type="text" name= "mar_energy" class="form-control col-3" id="mar_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "mar_energy" class="form-control col-3" id="mar_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>April</td>
-                      <td><input type="text" name= "apr_energy" class="form-control col-3" id="apr_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "apr_energy" class="form-control col-3" id="apr_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>May</td>
-                      <td><input type="text" name= "may_energy" class="form-control col-3" id="may_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "may_energy" class="form-control col-3" id="may_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>June</td>
-                      <td><input type="text" name= "jun_energy" class="form-control col-3" id="jun_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "jun_energy" class="form-control col-3" id="jun_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>July</td>
-                      <td><input type="text" name= "jul_energy" class="form-control col-3" id="jul_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "jul_energy" class="form-control col-3" id="jul_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>August</td>
-                      <td><input type="text" name= "aug_energy" class="form-control col-3" id="aug_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "aug_energy" class="form-control col-3" id="aug_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>September</td>
-                      <td><input type="text" name= "sep_energy" class="form-control col-3" id="sep_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "sep_energy" class="form-control col-3" id="sep_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>October</td>
-                      <td><input type="text" name= "oct_energy" class="form-control col-3" id="oct_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "oct_energy" class="form-control col-3" id="oct_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>November</td>
-                      <td><input type="text" name= "nov_energy" class="form-control col-3" id="nov_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "nov_energy" class="form-control col-3" id="nov_energy" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>December</td>
-                      <td><input type="text" name= "dec_energy" class="form-control col-3" id="dec_energy" placeholder="" value="" required>kWh</td>
+                      <td><input type="text" name= "dec_energy" class="form-control col-3" id="dec_energy" placeholder="kWh" value="" required></td>
                     </tr>
                   </tbody>
               </table>
