Temp fixed border for mobile view
Created validation for mpty string in year input

--- a/T_app/templates/input_report.html
+++ b/T_app/templates/input_report.html
@@ -3,6 +3,7 @@
 
   {% include 'base/head.html' %}
 
+
   <body>
 
     {% include 'base/navbar.html' %}
@@ -45,7 +46,7 @@
                   <tbody>
                     <tr>
                       <td>January</td>
-                      <td><input type="text" name= "jan_energy" class="form-control-custom col-3" id="energy_jan" placeholder="kWh" value="" required></td>
+                      <td><input type="text" name= "jan_energy" class="form-control col-3" id="energy_jan" placeholder="kWh" value="" required></td>
                     </tr>
                     <tr>
                       <td>Feburary</td>
